# ultrahonk_verifier

./: .gitignore  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: CI-ci-remote.yml  CI-coverage.yml  CI-rustdoc.yml
contracts/: Verifier.sol  zkVerifier.sol
scripts/: generate_benchmark_projects.sh  generate_large_benchmark_projects.sh  generate_solidity_contracts_generic.sh
src/: commitment.rs  constants.rs  errors.rs  key.rs  lib.rs  proof.rs  relations.rs  should.rs  srs.rs  transcript.rs  types.rs  utils.rs
src/contracts/: Verifier.sol
tests/data/plain/: proof  vk
tests/data/zk/: proof
